# robotkallare

./: (same as _user_ config, ignored)  .backup.senv  .dockerignore  .env  .env.example  .env.test  .gitignore  .windsurfrules  BACKEND_REFACTORING_TEST_SUMMARY.md  BEREDSKAP_ARKITEKTUR.md  CLAUDE.md  DOCUMENTATION.md  Dockerfile  Dockerfile.cli  Dockerfile.frontend  GDial_Development_Info.md  PROJEKTÖVERSIKT.md  README.md  REFACTORING_COMPLETION_SUMMARY.md  _diag_import.py  add_message_type.py  check_db_tables.py  check_tables.py  cli_call_tester.py  codebase_overview.txt  create_sms_template.py  debug_db_test.py  debug_test_db.py  dialer.db  direct_relationship_fix.py  docker-README.md  docker-cli-README.md  docker-compose.yml  docker-entrypoint.sh  export_openapi.py  file_viewer_app.py  fix_all_relationships.py  fix_custom_data.py  fix_indentation.py  fix_message_relationship.py  (+31 more)
app/: __init__.py  api.py  api_auth.py  api_contacts_groups.py  api_helpers.py  api_optimized.py  api_tts.py  burn_api.py  cli_manual_review.py  config.py  conftest.py  database.py  dependencies.py  dialer.py  dialer_old.py  importer.py  insert_data.py  inspect_users.py  logger.py  main.py  manual_review.py  models.py  outbox_worker.py  publisher.py  schemas.py  schemas_backup.py  security.py  seed_db.py  settings.py  settings_api.py  settings_old.py  test_api_auth.py  texter.py  tts.py  tts_queue.py  twilio_io.py
docs/: DOCUMENTATION.md  PROGRESSION_VIEW.md  PROJECT_OVERVIEW.md  README.md  README_RABBITMQ.md  code-guidelines.md  group_messenger_feature.md  implementation_plan_swedish_tts.md  (+6 more)
(+202 files in other folders)
